# burn

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  LICENSE  canister_ids.json  dfx.json
backend/src/can_burn_token/: burn.wasm
backend/src/can_burner/: Cargo.toml  can.did  unclaimed.md
backend/src/can_burner/src/: lib.rs  utils.rs
backend/src/can_dispenser/: Cargo.toml  can.did  dispensers.md
backend/src/can_dispenser/src/: lib.rs  utils.rs
backend/src/can_furnace/: Cargo.toml  can.did
backend/src/can_furnace/src/: lib.rs  utils.rs
backend/src/can_swap_mining/: Cargo.toml  can.did
backend/src/can_swap_mining/src/: lib.rs  utils.rs
backend/src/can_trading/: Cargo.toml  can.did
backend/src/can_trading/src/: lib.rs  utils.rs
backend/src/can_trading_invites/: Cargo.toml  can.did  virtual-trading.ipynb
backend/src/can_trading_invites/src/: lib.rs  utils.rs
backend/src/shared/: Cargo.toml  build.rs
backend/src/shared/src/: cmc.rs  decideid.rs  env.rs  icpswap.rs  icpswap_base_index.rs  icpswap_base_storage.rs  icrc1.rs  lib.rs  utils.rs
backend/src/shared/src/burner/: api.rs  client.rs  state.rs  types.rs
backend/src/shared/src/dispenser/: api.rs  client.rs  state.rs  types.rs
backend/src/shared/src/furnace/: api.rs  client.rs  mod.rs  state.rs  types.rs
backend/src/shared/src/trading/: api.rs  client.rs  state.rs  types.rs
backend/src/shared/src/trading_invites/: state.rs  types.rs
backend/src/t/: Cargo.toml
backend/src/t/src/: main.rs
frontend/: .gitignore  LICENSE  README.md  index.html  node.d.ts  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: .ic-assets.json5  browserconfig.xml  site.webmanifest
frontend/public/.well-known/: ic-domains
frontend/src/: App.tsx  index.css  index.tsx  routes.ts
frontend/src/components/airdrop/: index.tsx
frontend/src/components/avatar/: index.tsx
frontend/src/components/backlink/: index.tsx
frontend/src/components/balance-of/: index.tsx
frontend/src/components/bento/: index.tsx
frontend/src/components/boolean-input/: index.tsx
frontend/src/components/btn/: index.tsx
frontend/src/components/candlestick-chart/: index.tsx
frontend/src/components/copyable/: index.tsx
frontend/src/components/footer/: index.tsx
frontend/src/components/header/: index.tsx
frontend/src/components/help-btn/: index.tsx
frontend/src/components/icon/: index.tsx
frontend/src/components/logo/: index.tsx
frontend/src/components/modal/: index.tsx
frontend/src/components/multiswitch/: index.tsx
frontend/src/components/page/: index.tsx
frontend/src/components/pledge-form/: index.tsx
frontend/src/components/profile/: profile.tsx
frontend/src/components/qty-input/: index.tsx
frontend/src/components/raffle-round-entry/: index.tsx
frontend/src/components/return-calc/: index.tsx
frontend/src/components/select/: index.tsx
frontend/src/components/slider/: index.tsx
frontend/src/components/spoiler/: index.tsx
frontend/src/components/text-input/: index.tsx
frontend/src/components/timer/: index.tsx
frontend/src/components/token-icon/: index.tsx
frontend/src/components/validation-error/: index.tsx
frontend/src/components/voting-option/: index.tsx
frontend/src/components/wallet/: index.tsx
frontend/src/pages/airdrops/: index.tsx
frontend/src/pages/bonfire/: index.tsx
frontend/src/pages/create-airdrop/: index.tsx
frontend/src/pages/home/: index.tsx
frontend/src/pages/info/: index.tsx
frontend/src/pages/pool/: index.tsx
frontend/src/pages/trading/: index.tsx
frontend/src/store/: auth.tsx  burner.tsx  dispensers.tsx  furnace.tsx  tokens.tsx  trading-invites.tsx  trading.tsx  wallet.tsx
frontend/src/utils/: backend.ts  colors.ts  common.ts  encoding.ts  error.ts  math.ts  pseudonym.ts  security.ts  text.ts  time.ts  types.ts
scripts/: before-build.sh  deploy.backend.sh  deploy.frontend.sh  extract-did.sh  generate-bind.sh  upgrade-dispenser-code.sh
