[workspace]
members = ["backend/src/can_burner", "backend/src/shared"]
resolver = "2"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[workspace.dependencies]
candid = "0.10"
serde = "1.0"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
icrc-ledger-types = "0.1"
ic-ledger-types = "0.13"
num-bigint = "0.4"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
lazy_static = "1.4"
ic-e8s = "0.1.2"
garde = { version = "0.18", features = ["derive"] }
ic-stable-structures = "0.6"
sha2 = "0.10"
