[workspace]
members = [
    "backend/src/can_burner",
    "backend/src/can_furnace",
    "backend/src/can_dispenser",
    "backend/src/can_trading",
    "backend/src/can_trading_invites",
    "backend/src/can_swap_mining",
    "backend/src/shared",
]
resolver = "2"

[profile.release]
codegen-units = 1
strip = true
lto = true
opt-level = 'z'
panic = 'abort'

[workspace.dependencies]
ic-cdk = "0.13"
ic-stable-structures = "0.6"
ic-cdk-timers = "0.7"
ic-verifiable-credentials = { path = "../verifiable-credentials-sdk/rust-packages/ic-verifiable-credentials" }
ic-canister-sig-creation = "1.1"
ic-e8s = "0.1.2"
ic-ledger-types = "0.13"
icrc-ledger-types = "0.1"
candid = "0.10"
serde = "1.0"
num-bigint = "0.4"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3", default-features = false }
lazy_static = "1.4"
sha2 = "0.10"
garde = { version = "0.18", features = ["derive", "url", "unicode"] }
html-escape = "0.2"
url = "2.5"
ic-utils = "0.39"
serde_bytes = "0.11"
